# WordleSolver

./: .gitignore  CMakeLists.txt  LICENCE  README.md  result.txt  solver.cpp  solver.h  wordlesolver.cpp
src/: CMakeLists.txt
